try again to fix the li breaks in FF

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -491,7 +491,12 @@ section#institutions {
       -webkit-column-gap: 5px;
       column-count: 3;
       column-gap: 5px;
-      break-inside: avoid-column;
+      li.list-group-item {
+        display: inline-block;
+        -webkit-column-break-inside: avoid;
+        page-break-inside: avoid;
+        break-inside: avoid-column;
+      }
     }
   }
   section#institutions {
